fix z-index problems

--- a/src/components/dropdown-hiweb/dropdown-hiweb.scss
+++ b/src/components/dropdown-hiweb/dropdown-hiweb.scss
@@ -33,41 +33,43 @@
   .up {
     bottom: 50px;
   }
-  .dropdown-custom {
-    position: absolute;
-    background: white;
-    border-radius: .25em;
-    left: 0;
-    box-shadow: 0px 1px 5px #888888;
+  
+}
+
+.dropdown-custom {
+  position: absolute;
+  background: white;
+  border-radius: .25em;
+  left: 0;
+  box-shadow: 0px 1px 5px #888888;
+  width: fit-content;
+  height: fit-content;
+  padding: 5px;
+  z-index: 9999;
+  .item {
+    padding: 10px;
+    height: 40px;
+    min-width: 150px;
     width: fit-content;
-    height: fit-content;
-    padding: 5px;
-    z-index: 999;
-    .item {
-      padding: 10px;
-      height: 40px;
-      min-width: 150px;
-      width: fit-content;
-      white-space: nowrap;
+    white-space: nowrap;
+    display: flex;
+    cursor: pointer;
+    border-radius: .25em;
+    .icon {
+      height: 20px;
+      width: 20px;
       display: flex;
-      cursor: pointer;
-      border-radius: .25em;
-      .icon {
+      margin-left: 8px;
+      svg {
         height: 20px;
         width: 20px;
-        display: flex;
-        margin-left: 8px;
-        svg {
-          height: 20px;
-          width: 20px;
-        }
       }
     }
-    .item:hover {
-      background: #E5F1F7;
-    }
-    .item:active {
-      transform: scale(0.95);
-    }
+  }
+  .item:hover {
+    background: #E5F1F7;
+  }
+  .item:active {
+    transform: scale(0.95);
   }
 }
