--- a/src/components/table-hiweb/table-hiweb.scss
+++ b/src/components/table-hiweb/table-hiweb.scss
@@ -49,7 +49,7 @@ $dark-color: #37474f;
   tbody td:first-child, thead th:first-child {
     position: sticky;
     right: 0;
-    z-index: 1;
+    // z-index: 1;
     background: white;
     box-shadow: 10px 0 5px -2px #888;
     -webkit-box-shadow: 16px 0px 18px 6px rgba(0,0,0,0.52); 
@@ -58,7 +58,7 @@ $dark-color: #37474f;
   tbody td:last-child, thead th:last-child {
     position: sticky;
     left: 0;
-    z-index: 1;
+    // z-index: 1;
     background: white;
     -webkit-box-shadow: 16px 0px 18px 6px rgba(0,0,0,0.52); 
   box-shadow: 16px 0px 18px 6px rgba(0,0,0,0.52);
